crates/kul-layout/tests/snapshots/corpus__example_02_nuclear_family.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 398.0
height: 272.0
cards:
- person_id: alice
  kind: canonical
  x: 24.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Alice Sharma
- person_id: bob
  kind: canonical
  x: 214.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Bob Sharma
- person_id: carol
  kind: canonical
  x: 119.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Carol Sharma
edges:
- kind: birth
  routing: in_tree
  child_id: carol
  marriage_id: m_alice_bob
  points:
  - - 199.0
    - 56.0
  - - 199.0
    - 156.0
  - - 199.0
    - 156.0
  - - 199.0
    - 184.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: bob
  marriage_id: m_alice_bob
  points:
  - - 184.0
    - 56.0
  - - 214.0
    - 56.0
  ended: false
