crates/kul-layout/tests/snapshots/corpus__example_03_divorce_and_remarriage.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 1162.0
height: 272.0
cards:
- person_id: erik
  kind: ghost:past_marriage
  x: 24.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Erik Lindqvist
- person_id: astrid
  kind: ghost:past_marriage
  x: 214.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Astrid Lindqvist
- person_id: linnea
  kind: canonical
  x: 119.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Linnea Lindqvist
- person_id: erik
  kind: canonical
  x: 406.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Erik Lindqvist
- person_id: maja
  kind: canonical
  x: 596.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Maja Holm
- person_id: oskar
  kind: canonical
  x: 501.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Oskar Lindqvist
- person_id: astrid
  kind: canonical
  x: 788.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Astrid Lindqvist
- person_id: johan
  kind: canonical
  x: 978.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Johan Berg
- person_id: frida
  kind: canonical
  x: 883.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Frida Berg
edges:
- kind: birth
  routing: in_tree
  child_id: linnea
  marriage_id: m_erik_astrid
  points:
  - - 199.0
    - 56.0
  - - 199.0
    - 156.0
  - - 199.0
    - 156.0
  - - 199.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: oskar
  marriage_id: m_erik_maja
  points:
  - - 581.0
    - 56.0
  - - 581.0
    - 156.0
  - - 581.0
    - 156.0
  - - 581.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: frida
  marriage_id: m_astrid_johan
  points:
  - - 963.0
    - 56.0
  - - 963.0
    - 156.0
  - - 963.0
    - 156.0
  - - 963.0
    - 184.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: astrid
  marriage_id: m_erik_astrid
  points:
  - - 184.0
    - 56.0
  - - 214.0
    - 56.0
  ended: true
- kind: marriage
  routing: in_tree
  child_id: maja
  marriage_id: m_erik_maja
  points:
  - - 566.0
    - 56.0
  - - 596.0
    - 56.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: johan
  marriage_id: m_astrid_johan
  points:
  - - 948.0
    - 56.0
  - - 978.0
    - 56.0
  ended: false
