crates/kul-layout/tests/snapshots/corpus__example_03_three_generations.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 592.0
height: 432.0
cards:
- person_id: ramesh
  kind: canonical
  x: 25.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Ramesh Sharma
- person_id: sita
  kind: canonical
  x: 215.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Sita Sharma
- person_id: alice
  kind: canonical
  x: 25.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Alice Sharma
- person_id: bob
  kind: ghost:past_marriage
  x: 215.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Bob Sharma
- person_id: carol
  kind: canonical
  x: 24.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Carol Sharma
- person_id: ravi
  kind: canonical
  x: 216.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Ravi Sharma
- person_id: bob
  kind: canonical
  x: 408.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Bob Sharma
edges:
- kind: birth
  routing: in_tree
  child_id: alice
  marriage_id: m_ramesh_sita
  points:
  - - 200.0
    - 56.0
  - - 200.0
    - 156.0
  - - 105.0
    - 156.0
  - - 105.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: carol
  marriage_id: m_alice_bob
  points:
  - - 200.0
    - 216.0
  - - 200.0
    - 316.0
  - - 104.0
    - 316.0
  - - 104.0
    - 344.0
  ended: false
- kind: adoption
  routing: in_tree
  child_id: ravi
  marriage_id: m_alice_bob
  points:
  - - 200.0
    - 216.0
  - - 200.0
    - 316.0
  - - 296.0
    - 316.0
  - - 296.0
    - 344.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: sita
  marriage_id: m_ramesh_sita
  points:
  - - 185.0
    - 56.0
  - - 215.0
    - 56.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: bob
  marriage_id: m_alice_bob
  points:
  - - 185.0
    - 216.0
  - - 215.0
    - 216.0
  ended: true
