crates/kul-layout/tests/snapshots/corpus__example_04_polygamous_family.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 400.0
height: 432.0
cards:
- person_id: devraj
  kind: canonical
  x: 120.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Devraj Kumar
- person_id: meera
  kind: canonical
  x: 24.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Meera
- person_id: alice
  kind: canonical
  x: 216.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Alice Sharma
- person_id: priya
  kind: canonical
  x: 216.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Priya Kumar
bars: []
edges:
- kind: birth
  routing: in_tree
  child_id: priya
  marriage_id: m_devraj_alice
  points:
  - - 296.0
    - 248.0
  - - 296.0
    - 316.0
  - - 296.0
    - 316.0
  - - 296.0
    - 344.0
- kind: marriage
  routing: in_tree
  child_id: meera
  marriage_id: m_devraj_meera
  points:
  - - 200.0
    - 88.0
  - - 200.0
    - 156.0
  - - 104.0
    - 156.0
  - - 104.0
    - 184.0
- kind: marriage
  routing: in_tree
  child_id: alice
  marriage_id: m_devraj_alice
  points:
  - - 200.0
    - 88.0
  - - 200.0
    - 156.0
  - - 296.0
    - 156.0
  - - 296.0
    - 184.0
