crates/kul-layout/tests/snapshots/corpus__example_05_married_siblings.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 780.0
height: 272.0
cards:
- person_id: ramesh
  kind: canonical
  x: 215.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Ramesh Sharma
- person_id: sita
  kind: canonical
  x: 405.0
  y: 24.0
  width: 160.0
  height: 64.0
  name: Sita Sharma
- person_id: arjun
  kind: canonical
  x: 24.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Arjun Sharma
- person_id: priya
  kind: canonical
  x: 214.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Priya Sharma
- person_id: vikram
  kind: canonical
  x: 406.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Vikram Sharma
- person_id: nisha
  kind: canonical
  x: 596.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Nisha Sharma
edges:
- kind: birth
  routing: in_tree
  child_id: arjun
  marriage_id: m_ramesh_sita
  points:
  - - 390.0
    - 56.0
  - - 390.0
    - 156.0
  - - 104.0
    - 156.0
  - - 104.0
    - 184.0
  ended: false
- kind: birth
  routing: in_tree
  child_id: vikram
  marriage_id: m_ramesh_sita
  points:
  - - 390.0
    - 56.0
  - - 390.0
    - 156.0
  - - 486.0
    - 156.0
  - - 486.0
    - 184.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: sita
  marriage_id: m_ramesh_sita
  points:
  - - 375.0
    - 56.0
  - - 405.0
    - 56.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: priya
  marriage_id: m_arjun_priya
  points:
  - - 184.0
    - 216.0
  - - 214.0
    - 216.0
  ended: false
- kind: marriage
  routing: in_tree
  child_id: nisha
  marriage_id: m_vikram_nisha
  points:
  - - 566.0
    - 216.0
  - - 596.0
    - 216.0
  ended: false
