crates/kul-layout/tests/snapshots/corpus__example_06_three_branch_dynasty.snap
---
source: crates/kul-layout/tests/corpus.rs
expression: yaml
---
width: 1544.0
height: 432.0
cards:
- person_id: govind
  kind: canonical
  x: 692.5
  y: 24.0
  width: 160.0
  height: 64.0
  name: Govind Iyer
- person_id: lakshmi
  kind: canonical
  x: 882.5
  y: 24.0
  width: 160.0
  height: 64.0
  name: Lakshmi Iyer
- person_id: arjun
  kind: canonical
  x: 215.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Arjun Iyer
- person_id: indira
  kind: canonical
  x: 405.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Indira Iyer
- person_id: dilip
  kind: canonical
  x: 24.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Dilip Iyer
- person_id: hema
  kind: canonical
  x: 214.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Hema Iyer
- person_id: eshwar
  kind: canonical
  x: 406.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Eshwar Iyer
- person_id: ila
  kind: canonical
  x: 596.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Ila Iyer
- person_id: bharat
  kind: canonical
  x: 788.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Bharat Iyer
- person_id: janaki
  kind: canonical
  x: 978.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Janaki Iyer
- person_id: mohan
  kind: canonical
  x: 788.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Mohan Iyer
- person_id: jyoti
  kind: canonical
  x: 978.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Jyoti Iyer
- person_id: chitra
  kind: canonical
  x: 1170.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Chitra Iyer
- person_id: karan
  kind: canonical
  x: 1360.0
  y: 184.0
  width: 160.0
  height: 64.0
  name: Karan Iyer
- person_id: gaurav
  kind: canonical
  x: 1170.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Gaurav Iyer
- person_id: kamala
  kind: canonical
  x: 1360.0
  y: 344.0
  width: 160.0
  height: 64.0
  name: Kamala Iyer
bars:
- marriage_id: m_govind_lakshmi
  x: 858.5
  y: 51.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_arjun_indira
  x: 381.0
  y: 211.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_dilip_hema
  x: 190.0
  y: 371.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_eshwar_ila
  x: 572.0
  y: 371.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_bharat_janaki
  x: 954.0
  y: 211.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_mohan_jyoti
  x: 954.0
  y: 371.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_chitra_karan
  x: 1336.0
  y: 211.0
  width: 18.0
  height: 10.0
  ended: false
- marriage_id: m_gaurav_kamala
  x: 1336.0
  y: 371.0
  width: 18.0
  height: 10.0
  ended: false
edges:
- kind: birth
  routing: in_tree
  child_id: arjun
  marriage_id: m_govind_lakshmi
  points:
  - - 867.5
    - 61.0
  - - 867.5
    - 156.0
  - - 295.0
    - 156.0
  - - 295.0
    - 184.0
- kind: birth
  routing: in_tree
  child_id: dilip
  marriage_id: m_arjun_indira
  points:
  - - 390.0
    - 221.0
  - - 390.0
    - 316.0
  - - 104.0
    - 316.0
  - - 104.0
    - 344.0
- kind: birth
  routing: in_tree
  child_id: eshwar
  marriage_id: m_arjun_indira
  points:
  - - 390.0
    - 221.0
  - - 390.0
    - 316.0
  - - 486.0
    - 316.0
  - - 486.0
    - 344.0
- kind: birth
  routing: in_tree
  child_id: bharat
  marriage_id: m_govind_lakshmi
  points:
  - - 867.5
    - 61.0
  - - 867.5
    - 156.0
  - - 868.0
    - 156.0
  - - 868.0
    - 184.0
- kind: birth
  routing: in_tree
  child_id: mohan
  marriage_id: m_bharat_janaki
  points:
  - - 963.0
    - 221.0
  - - 963.0
    - 316.0
  - - 868.0
    - 316.0
  - - 868.0
    - 344.0
- kind: birth
  routing: in_tree
  child_id: chitra
  marriage_id: m_govind_lakshmi
  points:
  - - 867.5
    - 61.0
  - - 867.5
    - 156.0
  - - 1250.0
    - 156.0
  - - 1250.0
    - 184.0
- kind: birth
  routing: in_tree
  child_id: gaurav
  marriage_id: m_chitra_karan
  points:
  - - 1345.0
    - 221.0
  - - 1345.0
    - 316.0
  - - 1250.0
    - 316.0
  - - 1250.0
    - 344.0
